--- a/templates/home_page/homePage.html.twig
+++ b/templates/home_page/homePage.html.twig
@@ -8,13 +8,25 @@
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>D:/Programmes_Dev/www/AFPA_PROJET/symfo-auth-roles-users/src/Controller/HomePageController.php</code></li>
-        <li>Your template at <code>D:/Programmes_Dev/www/AFPA_PROJET/symfo-auth-roles-users/templates/home_page/index.html.twig</code></li>
-    </ul>
+<div class="example-wrapper">
+    <h1>Home Page</h1>
+    <a href="{{path('app_login')}}"> Connexion </a>
+
+    {% if app.user == false %}
+        <div>
+            <a href="{{path('app_register')}}">S'inscrire</a>
+        </div>
+    {% else %}
+        <div>
+            <a href=" {{path('app_logout')}} "> Déconnexion </a>
+        </div>
+    {% endif %}
+
+    {% if is_granted("ROLE_ADMIN") %}
+         <div>
+            <a href=" {{path('app_dashboard_admin')}} "> Admin Dash bord </a>
+        </div>
+    {% endif %}
 </div>
 {% endblock %}
